course-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-project
  template:
    metadata:
      labels:
        app: course-project
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: vsinerva/todo-app@sha256:4179e2e53cdf39b9df5132a585e4b899143b8d4114f0e4a32c5612a9f6953382
          volumeMounts:
            - name: todo-volume
              mountPath: /src/app/data
        - name: todo-backend
          image: vsinerva/todo-backend@sha256:94cf0b9a78c0227fea655dd5bf8f66ebc919830e18a411f533f9a6fb1d5fd2b3
