course-project/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: course-project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
      name: "app"
    - port: 2346
      protocol: TCP
      targetPort: 3002
      name: "backend"
