course-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-project-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: course-project-svc
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-project-svc
                port:
                  number: 2345
